--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,24 @@
 **/.DS_Store
 _build
+*.aux
+*.log
+*.toc
+*.out
+*.synctex.gz
+*.pdf
+*.gz
+*.bbl
+*.blg
+*.fdb_latexmk
+*.fls
+*.lof
+*.lot
+*.nav
+*.snm
+*.vrb
+*.xdv
+*.gz(busy)
+*.gz(busy)*
+*.gz(busy)**
+
+
