--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,14 +1,9 @@
 {
-  "name": "Ocaml",
+  "name": "Everest",
   "dockerFile": "Dockerfile",
-  "runArgs": ["--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined"],
-"remoteUser": "opam",
-"customizations": {
-	"vscode": {
-		"extensions": [
-			"GitHub.copilot",
-			"ocamllabs.ocaml-platform"
-		]
-	}
-}
+  "customizations": {
+    "vscode": {
+      "extensions": ["GitHub.copilot"]
+    }
+  }
 }
